--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,16 @@
 .header {
   font-size: 18px;
   font-weight: 400;
-  padding: 136px 50px 136px;
+  padding: 92px 24px;
   padding-bottom: 96px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+}
+
+a.header__linkheader__link_active {
+  text-decoration: none;
 }
 
 .header__menu {
@@ -19,7 +23,8 @@
 }
 
 .header__links-list {
-  display: flex;
+  display: -webkit-inline-box;
+  padding-left: 26.52px;
   gap: 32px;
 }
 
@@ -48,7 +53,7 @@
 }
 
 .header__address {
-  padding-left: 15.5%;
+  padding-left: 84px;
 }
 
 .header__links-list-item_no-bullet {
@@ -68,7 +73,7 @@
 .cover {
   background: url("../images/cover.jpg") center/cover;
   color: #fff;
-  
+
 }
 
 .cover__title {
@@ -95,7 +100,7 @@
   text-align: end;
   word-spacing: 17.5px;
   text-transform: uppercase;
-  margin-right: 6%;
+  margin-right: 79px;
 }
 
 
@@ -114,7 +119,7 @@
 .aligned-text_center {
   width: 100%;
   max-width: 1310px;
-  text-align: center;
+  padding-left: 289px;
 }
 
 .aligned-text_right {
@@ -174,7 +179,7 @@
 .lots__card-list-item {
   flex: 1 0 0%;
   min-height: 450px;
-  min-width: 430px;
+
 }
 
 .lots__card-list-item:first-child {
@@ -252,7 +257,6 @@
 
 .about {
   display: flex;
-  gap: 25px;
   padding-top: 35px;
   padding-left: 47px;
   margin-left: 24px;
@@ -294,7 +298,7 @@
 .footer {
   font-size: 18px;
   font-weight: 400;
-  padding: 0 50px 90px;
+  padding: 0 50px 88px;
   display: flex;
   justify-content: space-between;
 }
