--- a/styles/style.css
+++ b/styles/style.css
@@ -154,10 +154,8 @@ a.header__linkheader__link_active {
 
 
 .lots {
-  padding-top: 74px;
   padding-left: 24px;
   padding-right: 24px;
-  padding-bottom: 55px;
   margin-bottom: 146px;
 }
 
@@ -334,6 +332,11 @@ a.header__linkheader__link_active {
   justify-content: end;
   gap: 48px;
   list-style: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
 
 .footer__social-icon {
