--- a/styles/style.css
+++ b/styles/style.css
@@ -112,6 +112,7 @@ a.header__linkheader__link_active {
   height: inherit;
   padding: 165px 50px 50px;
   background-color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 179px;
 }
 
 
