--- a/styles/style.css
+++ b/styles/style.css
@@ -274,13 +274,22 @@ a.header__linkheader__link_active {
   font-weight: 700;
 }
 
-.about__text {
+.about__text_p1 {
   font-size: 20px;
   font-weight: 400;
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
   margin-top: 100px;
+  line-height: 24px;
+  height: 120px;
+  width: 688px;
+}
+
+.about__text_p2 {
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 23px;
+  line-height: 24px;
+  height: 168px;
+  width: 693px;
 }
 
 .footer {
