--- a/styles/style.css
+++ b/styles/style.css
@@ -1,40 +1,104 @@
-.header {
-  font-size: 18px;
+.not-responsive-static-layout {
+  max-width: 1440px;
+  margin: auto;
+}
+
+.no-wrap {
+  white-space: nowrap;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.aligned-text,
+.aligned-text_center,
+.aligned-text_right {
+  display: block;
+}
+
+.aligned-text {
+  text-align: left;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.address {
+  max-width: 236px;
   font-weight: 400;
-  padding: 92px 24px;
-  padding-bottom: 96px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.3px;
+}
+
+.bet-button {
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  color: inherit;
+  font-family: "Raleway", sans-serif;
+  font-size: 22px;
+  line-height: normal;
+  text-align: center;
+  text-transform: uppercase;
+  background: transparent;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.bet-button:hover {
+  transform: scale(1.03);
+}
+
+.header {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
-}
-
-address.footer__address {
-  box-sizing: content-box;
-}
-
-.header__menu {
-  flex: 0 0 auto;
-  width: 33.3%;
-}
-
-.header__link {
-  text-underline-position: under;
+  padding: 92px 50px 96px 51px;
 }
 
 .header__links-list {
-  display: -webkit-inline-box;
-  padding-left: 26.52px;
-  gap: 32px;
-}
-
-.header__links-list-item {
-  border-bottom: #000;
+  display: flex;
+  align-items: flex-start;
+  gap: 10px 33px;
   list-style: circle;
+  flex-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .header__links-list-item_no-bullit {
   list-style: none;
+}
+
+.header__link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: normal;
+  text-underline-offset: 5px;
+  transition: text-underline-offset 0.3s ease;
+}
+
+.header__link:hover {
+  text-underline-offset: 7px;
 }
 
 .header__link_active {
@@ -42,136 +106,87 @@ address.footer__address {
 }
 
 .header__logo {
-  flex: 0 0 auto;
+  display: block;
+  justify-self: center;
   width: 148px;
   height: 105px;
+  transition: transform 0.3s ease;
+}
+
+.header__logo:hover {
+  transform: scale(1.03);
 }
 
 .header__logo-image {
-  width: inherit;
-  height: inherit;
+  max-height: 100%;
+  object-fit: contain;
+  margin-left: -35px;
 }
 
 .header__address {
-  padding-left: 84px;
+  justify-self: end;
+  width: 236px;
 }
 
-.header__links-list-item_no-bullet {
-  list-style-type: none;
+.header__address-link {
+  text-underline-offset: 5px;
+  transition: text-underline-offset 0.3s ease;
 }
 
-.address {
-  flex: 0 0 auto;
-  width: 30.3%;
-  line-height: 135%;
-  font-style: normal;
-  text-underline-position: under;
+.header__address-link:hover {
+  text-underline-offset: 7px;
 }
 
 .cover {
-  background: url("../images/cover.jpg") center/cover;
+  position: relative;
+  z-index: 1;
+  padding: 173px 50px 50px 50px;
   color: #fff;
+  background-color: #a7a7a7;
+  background-image: url("../images/cover.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .cover__title {
-  font-size: 100px;
-  font-weight: 700;
-  letter-spacing: 0.3em;
-  text-transform: uppercase;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-}
-
-.cover__title span {
-  z-index: 10;
+  row-gap: 24px;
+  margin-bottom: 135px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 100%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
 }
 
 .cover__description {
-  margin-top: 120px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 
 .cover__description-text {
-  font-size: 22px;
+  margin-right: 80px;
   font-weight: 400;
-  line-height: 127.273%;
-  text-align: end;
-  word-spacing: 17.5px;
-  text-transform: uppercase;
-  margin-right: 79px;
-  z-index: 10;
-}
-
-.overlay {
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.cover-overlay {
-  position: absolute;
-  width: 1100px;
-  height: 757px;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.card-contents {
-  height: inherit;
-  padding: 165px 50px 50px;
-  margin-bottom: 179px;
-}
-
-.aligned-text_left {
-  text-align: left;
-}
-
-.aligned-text_center {
-  width: 100%;
-  max-width: 1310px;
-  padding-left: 289px;
-}
-
-.aligned-text_right {
-  text-align: right;
-}
-
-/* Letter spacing */
-
-.letter-spacing-extended {
-  letter-spacing: 0.6em;
-}
-
-.no-letter-spacing {
-  letter-spacing: 0;
-}
-
-.bet-button {
   font-size: 22px;
-  font-weight: 400;
+  line-height: 28px;
+  text-align: center;
   text-transform: uppercase;
-  background: none;
-  border: 1px solid #fff;
-  border-radius: 0;
-  color: #fff;
-  padding: 12px 32px;
-  z-index: 10;
-  font-family: Raleway, sans-serif;
+  word-spacing: 18px;
 }
 
 .lots {
-  padding-left: 24px;
-  padding-right: 24px;
-  margin-bottom: 146px;
+  padding: 180px 50px 50px 50px;
 }
 
 .lots__heading {
-  font-size: 40px;
+  margin-bottom: 27px;
+  margin-left: 40px;
   font-weight: 700;
-  margin: 0 0 27px 40px;
+  font-size: 40px;
+  line-height: normal;
   text-transform: uppercase;
 }
 
@@ -179,113 +194,173 @@ address.footer__address {
   display: flex;
   flex-wrap: nowrap;
   gap: 25px;
-  list-style: none;
+  width: 100%;
   margin-bottom: 30px;
+  list-style: none;
 }
 
 .lots__card-list-item {
-  flex: 1 0 0;
+  flex: 1 1 430px;
   min-height: 450px;
-  width: 33.3%;
 }
 
 .lots__look-more-link {
-  text-decoration: none;
-  text-transform: lowercase;
   margin-left: 40px;
-  font-size: 20px;
   font-weight: 400;
-  border-bottom: 1px solid #000;
+  font-size: 20px;
+  line-height: normal;
+  text-underline-offset: 5px;
+  transition: text-underline-offset 0.3s ease;
 }
 
-/* Card */
-
-.card {
-  color: #fff;
-  width: 334px;
-  height: 563px;
-}
-
-.card_type_film {
-  background: url(../images/card-lot-01.jpg) center/cover;
-}
-
-.card_type_book {
-  background: url(../images/card-lot-02.jpg) center/cover;
-}
-
-.card_type_picture {
-  background: url(../images/card-lot-03.jpg) center/cover;
+.lots__look-more-link:hover {
+  text-underline-offset: 7px;
 }
 
 .card-link {
+  display: block;
+  width: 100%;
   height: 100%;
   text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.card-link:hover {
+  transform: translateY(-5px);
+}
+
+.card {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 50px 40px;
+  color: #fff;
+}
+
+.card_type_film,
+.card_type_book,
+.card_type_picture {
+  background-color: #a7a7a7;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
 }
 
 .card__title {
-  font-size: 22px;
   font-weight: 700;
-  text-transform: uppercase;
+  font-size: 22px;
+  line-height: 120%;
   text-decoration: underline;
-  z-index: 10;
+  text-transform: uppercase;
 }
 
 .card__text {
-  line-height: 120%;
-  font-size: 20px;
+  margin-top: auto;
   font-weight: 400;
-  z-index: 10;
+  font-size: 20px;
+  line-height: 120%;
+  width: 254px;
 }
-
-/* About */
 
 .about {
-  display: flex;
-  padding-top: 35px;
-  padding-left: 47px;
-  margin-left: 24px;
-  margin-bottom: 180px;
-
-}
-
-.about__column:last-child {
-  margin-top: 103px;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  column-gap: 28px;
+  padding: 96px 50px 180px 50px;
 }
 
 .about__logo {
-  background-color: #000;
+  display: flex;
+  width: 240px;
+  height: 240px;
+  margin: 0 94px;
   border-radius: 50%;
-  margin-right: 72px;
-  padding: 63px 46px;
+  background: #000;
 }
 
 .about__logo-image {
   width: 148px;
+  height: 114px;
+  margin: auto;
+  object-fit: contain;
 }
 
 .about__title {
-  text-transform: uppercase;
-  font-size: 40px;
+  margin-top: 102px;
+  margin-bottom: 100px;
   font-weight: 700;
+  font-size: 40px;
+  line-height: normal;
+  text-transform: uppercase;
 }
 
-.about__text_p1 {
-  font-size: 20px;
+.about__text {
   font-weight: 400;
-  margin-top: 100px;
-  line-height: 24px;
+  font-size: 20px;
+  line-height: normal;
+}
+
+.about__text:not(:last-of-type) {
+  margin-bottom: 25px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
+  padding: 90px 50px;
+}
+
+.footer__address-link {
+  text-underline-offset: 5px;
+  transition: text-underline-offset 0.3s ease;
+}
+
+.footer__address-link:hover {
+  text-underline-offset: 7px;
+}
+
+.footer__menu-list {
+  text-align: center;
+  list-style: none;
+}
+
+.footer__menu-link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: normal;
+  text-underline-offset: 2px;
+  transition: text-underline-offset 0.3s ease;
+}
+
+p.about__text_one {
+  width: 687px;
   height: 120px;
-  width: 688px;
-}
-
-.about__text_p2 {
   font-size: 20px;
   font-weight: 400;
-  margin-top: 23px;
-  line-height: 24px;
+  margin-bottom: 24px;
+}
+
+p.about__text_two {
+  width: 688px;
   height: 168px;
-  width: 693px;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .footer {
@@ -309,6 +384,7 @@ address.footer__address {
   width: auto;
   display: flex;
   flex-direction: column;
+  margin-left: 323px;
 }
 
 .footer__menu-list {
@@ -331,6 +407,7 @@ address.footer__address {
   justify-content: end;
   gap: 48px;
   list-style: none;
+  margin-left: 85px;
 }
 
 .footer__social-icon {
