--- a/styles/style.css
+++ b/styles/style.css
@@ -1,104 +1,44 @@
-.not-responsive-static-layout {
-  max-width: 1440px;
-  margin: auto;
-}
-
-.no-wrap {
-  white-space: nowrap;
-}
-
-.letter-spacing-extended {
-  letter-spacing: 60px;
-}
-
-.no-letter-spacing {
-  letter-spacing: normal;
-}
-
-.aligned-text,
-.aligned-text_center,
-.aligned-text_right {
-  display: block;
-}
-
-.aligned-text {
-  text-align: left;
-}
-
-.aligned-text_center {
-  text-align: center;
-}
-
-.aligned-text_right {
-  text-align: right;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
-
-.address {
-  max-width: 236px;
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 24.3px;
-}
-
-.bet-button {
-  border: 1px solid #fff;
-  padding: 12px 32px;
-  color: inherit;
-  font-family: "Raleway", sans-serif;
-  font-size: 22px;
-  line-height: normal;
-  text-align: center;
-  text-transform: uppercase;
-  background: transparent;
-  transition: transform 0.3s ease;
-  cursor: pointer;
-}
-
-.bet-button:hover {
-  transform: scale(1.03);
-}
-
 .header {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  font-size: 18px;
+  font-weight: 400;
+  padding: 92px 24px;
+  padding-bottom: 96px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  padding: 92px 50px 96px 51px;
+}
+
+address.footer__address {
+  box-sizing: content-box;
+}
+
+a.header__linkheader__link_active {
+  text-decoration: none;
+}
+
+.header__menu {
+  flex: 0 0 auto;
+  width: 33.3%;
+}
+
+.header__link {
+  text-underline-position: under;
 }
 
 .header__links-list {
-  display: flex;
-  align-items: flex-start;
-  gap: 10px 33px;
+  display: -webkit-inline-box;
+  padding-left: 26.52px;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  border-bottom: #000;
   list-style: circle;
-  flex-wrap: nowrap;
-  white-space: nowrap;
 }
 
 .header__links-list-item_no-bullit {
   list-style: none;
-}
-
-.header__link {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: normal;
-  text-underline-offset: 5px;
-  transition: text-underline-offset 0.3s ease;
-}
-
-.header__link:hover {
-  text-underline-offset: 7px;
 }
 
 .header__link_active {
@@ -106,87 +46,138 @@
 }
 
 .header__logo {
-  display: block;
-  justify-self: center;
+  flex: 0 0 auto;
   width: 148px;
   height: 105px;
-  transition: transform 0.3s ease;
-}
-
-.header__logo:hover {
-  transform: scale(1.03);
 }
 
 .header__logo-image {
-  max-height: 100%;
-  object-fit: contain;
-  margin-left: -40px;
+  width: inherit;
+  height: inherit;
 }
 
 .header__address {
-  justify-self: end;
-  width: 236px;
+  padding-left: 84px;
 }
 
-.header__address-link {
-  text-underline-offset: 5px;
-  transition: text-underline-offset 0.3s ease;
+.header__links-list-item_no-bullet {
+  list-style-type: none;
 }
 
-.header__address-link:hover {
-  text-underline-offset: 7px;
+.address {
+  flex: 0 0 auto;
+  width: 33.3%;
+  line-height: 135%;
+  font-style: normal;
+  text-underline-position: under;
 }
 
 .cover {
-  position: relative;
-  z-index: 1;
-  padding: 173px 50px 50px 50px;
+  background: url("../images/cover.jpg");
   color: #fff;
-  background-color: #a7a7a7;
-  background-image: url("../images/cover.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  width: 100%;
 }
 
 .cover__title {
+  font-size: 100px;
+  font-weight: 700;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
   display: flex;
   flex-direction: column;
-  row-gap: 24px;
-  margin-bottom: 135px;
-  font-weight: 700;
-  font-size: 100px;
-  line-height: 100%;
-  letter-spacing: 30px;
-  text-transform: uppercase;
+  gap: 10px;
+}
+
+.cover__title span {
+  z-index: 10;
 }
 
 .cover__description {
+  margin-top: 120px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: end;
   align-items: center;
 }
 
 .cover__description-text {
-  margin-right: 80px;
-  font-weight: 400;
   font-size: 22px;
-  line-height: 28px;
-  text-align: center;
+  font-weight: 400;
+  line-height: 127.273%;
+  text-align: end;
+  word-spacing: 17.5px;
   text-transform: uppercase;
-  word-spacing: 18px;
+  margin-right: 79px;
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover-overlay {
+  position: absolute;
+  width: 76.5%;
+  height: 113%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.card-contents {
+  height: inherit;
+  padding: 165px 50px 50px;
+  margin-bottom: 179px;
+  position: relative;
+}
+
+.aligned-text_left {
+  text-align: left;
+}
+
+.aligned-text_center {
+  width: 100%;
+  max-width: 1310px;
+  padding-left: 289px;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+/* Letter spacing */
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.bet-button {
+  font-size: 22px;
+  font-weight: 400;
+  text-transform: uppercase;
+  background: none;
+  border: 1px solid #fff;
+  border-radius: 0;
+  color: #fff;
+  padding: 12px 32px;
+  z-index: 10;
+  font-family: Raleway, sans-serif;
 }
 
 .lots {
-  padding: 179px 50px 146px 24px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-bottom: 146px;
 }
 
 .lots__heading {
-  margin-bottom: 27px;
-  margin-left: 40px;
-  font-weight: 700;
   font-size: 40px;
-  line-height: normal;
+  font-weight: 700;
+  margin: 0 0 27px 40px;
   text-transform: uppercase;
 }
 
@@ -194,168 +185,122 @@
   display: flex;
   flex-wrap: nowrap;
   gap: 25px;
-  width: 100%;
-  margin-bottom: 30px;
   list-style: none;
+  margin-bottom: 30px;
 }
 
 .lots__card-list-item {
-  flex: 1 1 430px;
+  flex: 1 0 0;
   min-height: 450px;
+  width: 33.3%;
 }
 
 .lots__look-more-link {
-  margin-left: 40px;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: normal;
-  text-underline-offset: 5px;
-  transition: text-underline-offset 0.3s ease;
-}
-
-.lots__look-more-link:hover {
-  text-underline-offset: 7px;
-}
-
-.card-link {
-  display: block;
-  width: 100%;
-  height: 100%;
   text-decoration: none;
-  transition: transform 0.3s ease;
+  text-transform: lowercase;
+  margin-left: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  border-bottom: 1px solid #000;
 }
 
-.card-link:hover {
-  transform: translateY(-5px);
-}
+/* Card */
 
 .card {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  padding: 50px 40px;
   color: #fff;
-}
-
-.card_type_film,
-.card_type_book,
-.card_type_picture {
-  background-color: #a7a7a7;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  width: 334px;
+  height: 563px;
 }
 
 .card_type_film {
-  background-image: url("../images/card-lot-01.jpg");
+  background: url(../images/card-lot-01.jpg) center/cover;
 }
 
 .card_type_book {
-  background-image: url("../images/card-lot-02.jpg");
+  background: url(../images/card-lot-02.jpg) center/cover;
 }
 
 .card_type_picture {
-  background-image: url("../images/card-lot-03.jpg");
+  background: url(../images/card-lot-03.jpg) center/cover;
+}
+
+.card-link {
+  height: 100%;
+  text-decoration: none;
 }
 
 .card__title {
-  font-weight: 700;
   font-size: 22px;
-  line-height: 120%;
-  text-decoration: underline;
+  font-weight: 700;
   text-transform: uppercase;
+  text-decoration: underline;
+  z-index: 10;
+  margin-top: -119px;
 }
 
-.card__text {
-  margin-top: auto;
-  font-weight: 400;
-  font-size: 20px;
+.card__text_a {
   line-height: 120%;
+  font-size: 20px;
+  font-weight: 400;
+  z-index: 10;
+  padding-top: 265px;
   width: 254px;
 }
 
+.card__text_b {
+  line-height: 120%;
+  font-size: 20px;
+  font-weight: 400;
+  z-index: 10;
+  width: 254px;
+}
+.card__text_c {
+  line-height: 120%;
+  font-size: 20px;
+  font-weight: 400;
+  z-index: 10;
+  width: 254px;
+  padding-top: 120px;
+}
+/* About */
+
 .about {
-  display: grid;
-  grid-template-columns: min-content 1fr;
-  column-gap: 28px;
-  padding: 0px 24px 180px 24px;
+  display: flex;
+  padding-top: 35px;
+  padding-left: 47px;
+  margin-left: 24px;
+  margin-bottom: 180px;
+
+}
+
+.about__column:last-child {
+  margin-top: 103px;
 }
 
 .about__logo {
-  display: flex;
-  width: 240px;
-  height: 240px;
-  margin-left: 47px;
-  margin-right: 72px;
+  background-color: #000;
   border-radius: 50%;
-  background: #000;
+  margin-right: 72px;
+  padding: 63px 46px;
 }
 
 .about__logo-image {
   width: 148px;
-  height: 114px;
-  margin: auto;
-  object-fit: contain;
 }
 
 .about__title {
-  margin-top: 102px;
-  margin-bottom: 100px;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: normal;
   text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 700;
 }
 
 .about__text {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: normal;
-}
-
-.about__text:not(:last-of-type) {
-  margin-bottom: 25px;
-}
-
-.footer__address-link {
-  text-underline-offset: 5px;
-  transition: text-underline-offset 0.3s ease;
-}
-
-.footer__address-link:hover {
-  text-underline-offset: 7px;
-}
-
-.footer__menu-list {
-  text-align: center;
-  list-style: none;
-}
-
-.footer__menu-link {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: normal;
-  text-underline-offset: 2px;
-  transition: text-underline-offset 0.3s ease;
-  text-underline-position: under;
-}
-
-p.about__text_one {
-  width: 687px;
-  height: 120px;
   font-size: 20px;
   font-weight: 400;
-  margin-bottom: 24px;
-}
-
-p.about__text_two {
-  width: 688px;
-  height: 168px;
-  font-size: 20px;
-  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-top: 100px;
 }
 
 .footer {
@@ -379,7 +324,15 @@ p.about__text_two {
   width: auto;
   display: flex;
   flex-direction: column;
-  margin-left: 230px;
+}
+
+.footer__menu-list {
+  list-style: none;
+  text-align: center;
+}
+
+.footer__menu-link {
+  text-underline-position: under;
 }
 
 .footer__menu-link_active {
@@ -393,7 +346,6 @@ p.about__text_two {
   justify-content: end;
   gap: 48px;
   list-style: none;
-  margin-left: 85px;
 }
 
 .footer__social-icon {
