--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@
   list-style: circle;
   flex-wrap: nowrap;
   white-space: nowrap;
+  padding-top: 2px;
 }
 
 .header__links-list-item_no-bullit {
@@ -120,12 +121,13 @@
 .header__logo-image {
   max-height: 100%;
   object-fit: contain;
-  margin-left: -40px;
+  margin-left: -45px;
 }
 
 .header__address {
   justify-self: end;
   width: 236px;
+  padding-top: 2px;
 }
 
 .header__address-link {
@@ -342,6 +344,7 @@
   text-underline-position: under;
 }
 
+
 p.about__text_one {
   width: 687px;
   height: 120px;
@@ -362,7 +365,7 @@ p.about__text_two {
   font-weight: 400;
   padding: 0 50px 88px;
   display: flex;
-  justify-content: space-between;
+
 }
 
 .footer__address {
@@ -378,7 +381,7 @@ p.about__text_two {
   width: auto;
   display: flex;
   flex-direction: column;
-  margin-left: 230px;
+  margin-left: 185.48px;
 }
 
 .footer__menu-link_active {
@@ -392,7 +395,12 @@ p.about__text_two {
   justify-content: end;
   gap: 48px;
   list-style: none;
-  margin-left: 85px;
+  margin-left: 90px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
 
 .footer__social-icon {
