--- a/styles/style.css
+++ b/styles/style.css
@@ -180,7 +180,7 @@
 }
 
 .lots {
-  padding: 177px 50px 146px 24px;
+  padding: 177px 24px 146px 24px;
 }
 
 .lots__heading {
@@ -194,7 +194,7 @@
 
 .lots__card-list {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap: 25px;
   width: 100%;
   margin-bottom: 30px;
@@ -202,8 +202,9 @@
 }
 
 .lots__card-list-item {
-  flex: 1 1 430px;
-  min-height: 450px;
+  min-height: 563px;
+  width: 334px;
+
 }
 
 .lots__look-more-link {
@@ -240,11 +241,6 @@
   height: 100%;
   padding: 50px 40px;
   color: #fff;
-}
-
-.card_type_film,
-.card_type_book,
-.card_type_picture {
   background-color: #a7a7a7;
   background-repeat: no-repeat;
   background-position: center;
@@ -344,20 +340,6 @@
   text-underline-position: under;
 }
 
-p.about__text_up {
-  width: 687px;
-  height: 120px;
-  font-size: 20px;
-  font-weight: 400;
-  margin-bottom: 24px;
-}
-
-p.about__text_down {
-  width: 100%;
-  font-size: 20px;
-  font-weight: 400;
-}
-
 .footer {
   font-size: 18px;
   font-weight: 400;
@@ -379,8 +361,8 @@ p.about__text_down {
   width: auto;
   display: flex;
   flex-direction: column;
-  margin-left: 201.48px;
-  margin-top: -1px;
+  margin-left: 190.48px;
+  margin-top: -2px
 }
 
 .footer__menu-link_active {
@@ -395,7 +377,7 @@ p.about__text_down {
   gap: 48px;
   list-style: none;
   margin-left: 90px;
-  margin-top: -1px;
+  margin-top: -2px;
 }
 
 .footer__social-icon {
